<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyProfile">
        <include layout="@layout/toolbar_layout"/>

        <ImageView
            android:id="@+id/myImage"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/profile_picture"
            android:scaleType="centerInside"
            android:src="@drawable/img_20160113_111054_edit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/amarante"
            android:text="@string/benjamin_mark"
            android:textSize="20sp" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#5f5f5f"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track"
                android:fontFamily="@font/amarante"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:text="@string/android"
                android:fontFamily="@font/amarante"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:fontFamily="@font/amarante"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/nigeria"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/amarante"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:fontFamily="@font/amarante"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/mquadrant_gmail_com"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/amarante"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:fontFamily="@font/amarante"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/_2348129373263"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/amarante"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slack_username"
                android:fontFamily="@font/amarante"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/benmark"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/amarante"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>